--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,10 @@
 @import url('https://rsms.me/inter/inter.css');
 
 
+html{
+  overflow-x: hidden;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
